fixed overflow

--- a/src/components/ChatArea/ChatArea.css
+++ b/src/components/ChatArea/ChatArea.css
@@ -16,6 +16,8 @@ h2 {
   
   .chat-area-container {
     background: #FFFFFF;
+    height: 90vh;
+    overflow-y: scroll;
   }
   
   
