--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -85,7 +85,7 @@
   }
 }
 
-@media (max-width: 48em) {
+@media (max-width: 40em) {
   .info {
     display: none;
   }
